# Training-App-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.6d44181  DataBaseAdapter.cpp  DataBaseAdapter.h  DataBaseModel.cpp  DataBaseModel.h  Dockerfile  README.md  SETUP.md  TODO.md  Tests.cpp  batteryvalue.cpp  batteryvalue.h  database.cpp  database.h  firebase_auth.cpp  firebase_auth.h  firebase_database.cpp  firebase_database.h  google-services.json  main.cpp  setup1.md  test_database.db  todo.md
android-building/: android  build-android.sh  run-android.docker.sh
android-new/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  android  build-android.sh  build.gradle.in
android-old/: Dockerfile-android  build-android.sh  docker-android-build.sh  run-android.docker.sh
apk-build/: Dockerfile-android  docker-android-build.sh  get_android.sh  get_qt.sh  run-android-docker.sh
catch/: catch_main.cpp
inc/: database.h
include/: database.h
qml/: AchievementsPage.qml  BottomRow.qml  DataBaseViewModel.qml  Helper.js  Icon.qml  IconColor.qml  MainPage.qml  MainScreen.qml  MapModel.qml  MenuButton.qml  ProgresBar.qml  ProgressBar.qml  RunningPage.qml  Style.qml  TextButton.qml  TextWithIcon.qml  WeeklyStatsPage.qml  main.qml  qml.qrc
qml/pages/: AchievementsPage.qml  DebugPage.qml  LogPage.qml  RunningPage.qml  SettingsPage.qml  WeeklyStatsPage.qml
qml/utils/: BottomRow.qml  CustomIcon.qml  Icon.qml  MainPage.qml  MenuButton.qml  ProgresBar.qml  RadialProgressBar.qml  SettingsItem.qml  StyledComboBox.qml  TextButton.qml  TextWithIcon.qml
qml/viewmodels/: DataBaseViewModel.qml  MapModel.qml
src/: AndroidManifest.xml  CMakeLists.txt  DataBaseModel.cpp  DataBaseModel.h  NotificationClient.cpp  NotificationClient.h  NotificationClient.java  database.cpp  database.h  deleter.h  firebase_auth.cpp  firebase_auth.h  firebase_database.cpp  firebase_database.h  gradle.properties  main.cpp  settings.gradle  sharedPtr.h
src/android/: AndroidManifest.xml
src/android/src/org/qtproject/example/androidnotifier/: NotificationClient.java
test/: CMakeLists.txt
test/tests/: CMakeLists.txt  test1.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test_sqlite_database.cpp
tools/: .clang-format  .clang-tidy  build-desktop.sh  clang-format.sh  clang-tidy.sh  docker-build.sh  run-docker.sh
